--- a/api/info/known.json
+++ b/api/info/known.json
@@ -1,5 +1,5 @@
 {
   "bb28c5cbccab473fa93023f81d58d63d": "Minecraft Youtuber",
-  "a-b-c-d-e": "Admin User",
-  "x-y-z": "Cool member"
+  "1a76a299-1d1b-49a9-bd29-6ffe853242a7": "Gay Femboy",
+  "1a76a299-1d1b-49a9-bd29-6ffe853242a7": "Haru the gayest nig ever"
 }
